fixed country select height overflow

--- a/src/VisGraph.scss
+++ b/src/VisGraph.scss
@@ -56,11 +56,14 @@
   &__table {
     flex-grow: 4;
     flex-shrink: 1;
-    flex-basis: 50%;
+    flex-basis: auto;
     width: 100%;
     position: relative;
     z-index: 0;
-    min-height: 350px;
+    // min-height: 350px;
+    .bp3-overlay.bp3-overlay-container.bp3-overlay-inline {
+      position: relative;
+    }
   }
 
   &__button-group {
