--- a/src/editor/TableEditor.scss
+++ b/src/editor/TableEditor.scss
@@ -6,7 +6,7 @@
 
   .data-grid-container {
     display: block;
-    overflow-x: scroll;
+    overflow: scroll;
     position: relative;
     height: 100%;
   }
